--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -7,7 +7,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Main View Controller-->
+        <!--My Places-->
         <scene sceneID="UNv-AE-wuW">
             <objects>
                 <tableViewController id="Mqq-Rg-p0r" customClass="MainViewController" customModule="MyPlaces" customModuleProvider="target" sceneMemberID="viewController">
@@ -16,13 +16,44 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="a9O-5O-CuV">
-                                <rect key="frame" x="0.0" y="28" width="390" height="43.666667938232422"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="87" id="a9O-5O-CuV" customClass="Cell" customModule="MyPlaces" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="28" width="390" height="87"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="a9O-5O-CuV" id="JIj-au-lga">
-                                    <rect key="frame" x="0.0" y="0.0" width="390" height="43.666667938232422"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="87"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="bSy-nn-E7i">
+                                            <rect key="frame" x="0.0" y="0.0" width="390" height="87"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Aph-sF-dKa">
+                                                    <rect key="frame" x="8" y="8" width="71" height="71"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="Aph-sF-dKa" secondAttribute="height" multiplier="85:85" id="M4m-pr-rzj"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5b-LR-0I1">
+                                                    <rect key="frame" x="99" y="30.333333333333336" width="283" height="26.333333333333336"/>
+                                                    <fontDescription key="fontDescription" name="Thonburi" family="Thonburi" pointSize="20"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <directionalEdgeInsets key="directionalLayoutMargins" top="8" leading="8" bottom="8" trailing="8"/>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="bSy-nn-E7i" firstAttribute="top" secondItem="JIj-au-lga" secondAttribute="top" id="92x-yC-wk5"/>
+                                        <constraint firstAttribute="bottom" secondItem="bSy-nn-E7i" secondAttribute="bottom" id="LQE-zY-bwa"/>
+                                        <constraint firstAttribute="trailing" secondItem="bSy-nn-E7i" secondAttribute="trailing" id="a9A-Oy-5fk"/>
+                                        <constraint firstItem="bSy-nn-E7i" firstAttribute="leading" secondItem="JIj-au-lga" secondAttribute="leading" id="mYP-dv-h96"/>
+                                    </constraints>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="restaurantImage" destination="Aph-sF-dKa" id="TZ7-nr-zrO"/>
+                                    <outlet property="restaurantLabel" destination="t5b-LR-0I1" id="AJS-Eo-qf2"/>
+                                    <outlet property="stackView" destination="bSy-nn-E7i" id="Qa9-re-LhQ"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -30,11 +61,11 @@
                             <outlet property="delegate" destination="Mqq-Rg-p0r" id="ozx-a9-CRp"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="gTJ-iq-6kl"/>
+                    <navigationItem key="navigationItem" title="My Places" id="gTJ-iq-6kl"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6mS-7U-fIT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="152" y="65"/>
+            <point key="canvasLocation" x="150.76923076923077" y="64.691943127962077"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="YhG-O7-bAw">
@@ -43,6 +74,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CaD-rH-fVn">
                         <rect key="frame" x="0.0" y="44" width="390" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <fontDescription key="fontDescription" name="Chalkduster" family="Chalkduster" pointSize="24"/>
+                        </textAttributes>
                     </navigationBar>
                     <connections>
                         <segue destination="Mqq-Rg-p0r" kind="relationship" relationship="rootViewController" id="LVy-rU-1k0"/>
