End rating refactoring

--- a/MyPlaces/Base.lproj/Main.storyboard
+++ b/MyPlaces/Base.lproj/Main.storyboard
@@ -152,13 +152,13 @@
                                             <rect key="frame" x="0.0" y="0.0" width="390" height="140"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xoX-jh-GT3" customClass="RatingControl" customModule="MyPlaces" customModuleProvider="target">
+                                                <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="252" placeholderIntrinsicHeight="44" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="xoX-jh-GT3" customClass="RatingControl" customModule="MyPlaces" customModuleProvider="target">
                                                     <rect key="frame" x="69" y="48" width="252" height="44"/>
                                                 </stackView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="xoX-jh-GT3" firstAttribute="centerX" secondItem="gPb-HL-Tg4" secondAttribute="centerX" id="DBF-qG-S4s"/>
-                                                <constraint firstItem="xoX-jh-GT3" firstAttribute="centerY" secondItem="gPb-HL-Tg4" secondAttribute="centerY" id="rIB-Y9-BRh"/>
+                                                <constraint firstItem="xoX-jh-GT3" firstAttribute="centerX" secondItem="gPb-HL-Tg4" secondAttribute="centerX" id="IzM-JP-FCu"/>
+                                                <constraint firstItem="xoX-jh-GT3" firstAttribute="centerY" secondItem="gPb-HL-Tg4" secondAttribute="centerY" id="p33-O7-ZGK"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -370,6 +370,11 @@
             <point key="canvasLocation" x="960" y="-693"/>
         </scene>
     </scenes>
+    <designables>
+        <designable name="xoX-jh-GT3">
+            <size key="intrinsicContentSize" width="252" height="44"/>
+        </designable>
+    </designables>
     <inferredMetricsTieBreakers>
         <segue reference="jSX-SV-DNa"/>
     </inferredMetricsTieBreakers>
